# ml-project

./: .pre-commit-config.yaml  pyproject.toml  tox.ini
tests/: test_ml_project.py
