[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = ""
authors = ["LuiGGi629 <wojtek.felix.zuber@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = {version = "^1.1.1", extras = ["all"]}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.3"
mypy = "^0.782"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
